--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,7 +47,8 @@ javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.jstl11.classpath}:\
     ${file.reference.primefaces-4.0.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
