--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,7 +10,7 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
 auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -35,6 +35,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.primefaces-4.0.jar=/home/pedro/Downloads/primefaces-4.0.jar
+file.reference.primefaces-4.0.jar-1=F:\\Users\\Pedro\\Downloads\\primefaces-4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,6 +46,7 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
+    ${file.reference.primefaces-4.0.jar-1}:\
     ${libs.jstl11.classpath}:\
     ${file.reference.primefaces-4.0.jar}:\
     ${libs.eclipselink.classpath}:\
